<resources>
    <string name="app_name">Tino</string>

    <!-- Account -->
    <string name="account_statistics_from_username">Statistics from username</string>
    <string name="account_save_username_error">Error while saving username</string>
    <string name="account_user_not_exist" >User \"%s\" does not exist</string>

    <!-- Statistics -->
    <string name="statistics_notification_count">Received %d notifications</string>
    <string name="statistics_notification_idle_time">Idle time from all notifications of %s</string>
    <string name="statistics_notification_most_from_app">Receiving the most notifications from %s: %d</string>
    <string name="statistics_notification_longest_idle_time_from_app">The longest notification idled for %s from %s</string>
    <string name="statistics_counting_since">Counting since:\n%s</string>
    <string name="statistics_per_app">Statistics per App</string>

    <!-- Single App Statistics -->
    <string name="statistics_single_app_subtitle">from %s</string>
    <string name="statistics_single_app_notification_count">Received %d notifications</string>
    <string name="statistics_single_app_notification_idle_time">Idle time from all notifications of %s</string>
    <string name="statistics_single_app_notification_longest_idle_time">The longest notification idled for %s</string>
    <string name="statistics_single_app_notification_average">All notifications idled for %s in average</string>

    <!-- Debug -->
    <string name="debug_test_notification">Test notification</string>
    <string name="debug_listener_access">Listener access</string>
    <string name="debug_stored_notifications">Show stored notifications</string>

    <!-- Generic -->
    <string name="generic_account">Account</string>
    <string name="generic_username">Username</string>
    <string name="generic_save">Save</string>
    <string name="generic_search">Search</string>
    <string name="generic_statistics">Statistics</string>

</resources>
