<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <TextView
        android:id="@+id/accountTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/generic_account"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/accountUserNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/generic_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accountTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/accountUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveUserName"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/generic_save"
        app:layout_constraintEnd_toEndOf="@id/accountUserNameLayout"
        app:layout_constraintTop_toBottomOf="@id/accountUserNameLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/seeStatisticsFromLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/account_statistics_from_username"
        app:layout_constraintEnd_toEndOf="@id/accountUserNameLayout"
        app:layout_constraintStart_toStartOf="@id/accountUserNameLayout"
        app:layout_constraintTop_toBottomOf="@id/saveUserName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/seeStatisticsFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/seeStatisticsFromButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/generic_search"
        app:layout_constraintEnd_toEndOf="@id/seeStatisticsFromLayout"
        app:layout_constraintTop_toBottomOf="@id/seeStatisticsFromLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>