<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    tools:context=".presentation.MainActivity">

    <Button
        android:id="@+id/testNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debug_test_notification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/enableNotificationListenerAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debug_listener_access"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testNotification" />

    <Button
        android:id="@+id/displayStoredNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debug_stored_notifications"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enableNotificationListenerAccess" />

    <TextView
        android:id="@+id/userUniqueId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/displayStoredNotifications"
        tools:text="UID: 12345" />
</androidx.constraintlayout.widget.ConstraintLayout>